# did-stepwise

./: .gitignore  Justfile  README.md  README.qmd  pyproject.toml
docs/: harmon.md
output/: harmon_ex.txt  harmon_simexperiment.txt
scripts/: example_docs.py  harmon_ex.py  harmon_simexperiment.py  hsim.py  hsim_weights.py
scripts/stata/: harmon_sim_data.do
src/did_sw/: __init__.py  comparison.py  estimator.py  sim.py  utils.py
src/did_sw/_testing/: __init__.py
tests/: test_comparisons_swdd_sgdd.py  test_did_imp_harmon.py  test_pretrends_swdd.py  test_swdd.py
