[project]
name = "did_sw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jsr-p", email = "jsr-p@sodas.ku.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "did-imp",
    "marginaleffects>=0.0.15",
    "matplotlib>=3.10.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pyfixest>=0.28.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]


[project.scripts]
didtools = "did_sw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "line-profiler>=4.2.0",
    "memory-profiler>=0.61.0",
    "pdbpp>=0.11.6",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
]
docs = [
    "jupyter>=1.1.1",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "coverage-badge>=1.1.2",
]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.ruff]
ignore = ["E741"]

[tool.uv.sources]
did-imp = { path = "../did-imputation" }
